--- a/sample/Search.RazorPagesApp/Pages/Shared/_Layout.cshtml
+++ b/sample/Search.RazorPagesApp/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>@ViewData["Title"] - Search.RazorPagesApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <seo-canonical />
+    <seo-alternate />
+    <seo-keywords />
+    <seo-description />
 </head>
 <body>
     <header>
