add canonical link concept

--- a/sample/Search.RazorPagesApp/Pages/Shared/_Layout.cshtml
+++ b/sample/Search.RazorPagesApp/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Search.RazorPagesApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <seo-canonical />
+    <seo-canonical site="https://www.sathai.com"  />    
     <seo-alternate />
     <seo-keywords />
     <seo-description />
