--- a/sample/Search.RazorPagesApp/Pages/_ViewImports.cshtml
+++ b/sample/Search.RazorPagesApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using Search.RazorPagesApp
 @namespace Search.RazorPagesApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Wangkanai.Webmaster.TagHelpers
