--- a/sample/Search.MvcApp/Views/_ViewImports.cshtml
+++ b/sample/Search.MvcApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Search.MvcApp
 @using Search.MvcApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Wangkanai.Webmaster.TagHelpers
