--- a/sample/Search.MvcApp/Views/Home/Index.cshtml
+++ b/sample/Search.MvcApp/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <img inline-src="~/nav.scss" />    
+    <img inline="~/sathai-logo.svg" alt="logo" />    
+    <img src="~/sathai-logo.svg" alt="logo"/>
 </div>
