--- a/sample/PageApp/Pages/Index.cshtml
+++ b/sample/PageApp/Pages/Index.cshtml
@@ -10,5 +10,5 @@
 </div>
 
 <gravatar email="sarin@@wangkanai.com" size="X64"/>
-<inline-img src="" />
-<img src="~/binary-code.svg" alt="codes" />
+<inline-img src="" alt="code" />
+<img src="binary-code.svg" alt="code"/>
